--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ img {
   justify-content: center;
   position: relative;
   z-index: 100;
+  overflow-x: hidden;
 }
 
 .header__toggle {
@@ -66,7 +67,7 @@ img {
   align-items: center;
   justify-content: space-around;
   position: absolute;
-  left: 150%;
+  left: 100%;
   opacity: 0;
   transition: all 0.6s linear;
 }
@@ -161,6 +162,19 @@ img {
   max-width: 60px;
 }
 
+.about .about-img {
+  width: 100%;
+  height: 300px;
+}
+
+.about .top-img {
+  background: url(/images/image-about-dark.jpg) no-repeat center center/cover;
+}
+
+.about .bottom-img {
+  background: url(/images/image-about-light.jpg) no-repeat center center/cover;
+}
+
 .about .about-content {
   padding: 3rem;
 }
@@ -182,4 +196,64 @@ img {
 /* ====END-MAIN==== */
 /* ====END-GLOBAL-STYLES==== */
 /* ====MEDIA QUERIES==== */
+@media (min-width: 1000px) {
+  .main {
+    height: 100vh;
+    overflow: hidden;
+  }
+  .header {
+    width: 40%;
+    padding: 0 4rem;
+  }
+  .header__toggle {
+    display: none;
+  }
+  .nav {
+    position: unset;
+    background-color: transparent;
+    opacity: 1;
+  }
+  .nav__toggle {
+    display: none;
+  }
+  .nav__link {
+    color: white;
+  }
+  .slider {
+    height: 65%;
+  }
+  .slide {
+    height: 100%;
+    display: flex;
+  }
+  .slide .slide__img {
+    width: 60%;
+    height: 100%;
+  }
+  .slide .slide__img img {
+    height: 100%;
+  }
+  .slide .slide__img .slide__btn {
+    right: -12.5%;
+    z-index: 100;
+  }
+  .slide__content {
+    width: 70%;
+    padding: 0 15rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .slide__content a {
+    width: 100%;
+  }
+  .about {
+    height: 35%;
+    display: flex;
+  }
+  .about .about-img {
+    height: 100%;
+  }
+}
 /*# sourceMappingURL=main.css.map */
