--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,6 @@
 }
 
 html {
-  scroll-behavior: smooth;
   font-size: 62.5%;
   overflow-x: hidden;
 }
@@ -36,16 +35,19 @@ img {
 }
 
 /* ====END-RESET=== */
+.flexcenter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /* ====START GLOBAL STYLES==== */
 .header {
   background-color: transparent;
   height: 15vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  z-index: 100;
   overflow-x: hidden;
+  position: relative;
+  z-index: 10;
 }
 
 .header__toggle {
@@ -69,7 +71,7 @@ img {
   position: absolute;
   left: 100%;
   opacity: 0;
-  transition: all 0.6s linear;
+  transition: all 0.4s linear;
 }
 
 .nav__toggle {
@@ -90,7 +92,25 @@ img {
 .nav__link {
   color: black;
   font-size: 1.3rem;
-  font-weight: 700;
+  font-weight: 600;
+  position: relative;
+}
+
+.nav__link::after {
+  content: "";
+  position: absolute;
+  bottom: -40%;
+  left: 0;
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  transform-origin: center;
+  transform: scale(0);
+  transition: all 0.3s;
+}
+
+.nav__link:hover::after {
+  transform: scale(1);
 }
 
 .nav.open {
@@ -120,6 +140,12 @@ img {
   background-color: black;
   border: none;
   outline: none;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.slide__img .slide__btn button:hover {
+  background-color: #a1a1a1;
 }
 
 .slide__img .slide__btn button:first-of-type {
@@ -154,7 +180,12 @@ img {
   color: black;
   font-weight: 700;
   text-transform: uppercase;
-  letter-spacing: 3px;
+  letter-spacing: 4px;
+  transition: all 0.2s;
+}
+
+.slide__content a:hover {
+  color: #a1a1a1;
 }
 
 .slide__content a img {
@@ -193,10 +224,9 @@ img {
   text-align: justify;
 }
 
-/* ====END-MAIN==== */
 /* ====END-GLOBAL-STYLES==== */
 /* ====MEDIA QUERIES==== */
-@media (min-width: 1000px) {
+@media (min-width: 900px) {
   .main {
     height: 100vh;
     overflow: hidden;
@@ -218,39 +248,40 @@ img {
   }
   .nav__link {
     color: white;
+    font-size: 1.6rem;
   }
   .slider {
     height: 65%;
   }
-  .slide {
+  .slider .slide {
     height: 100%;
     display: flex;
   }
-  .slide .slide__img {
-    width: 60%;
+  .slider .slide .slide__img {
+    width: 100%;
     height: 100%;
   }
-  .slide .slide__img img {
+  .slider .slide .slide__img img {
     height: 100%;
   }
-  .slide .slide__img .slide__btn {
-    right: -12.5%;
-    z-index: 100;
+  .slider .slide .slide__img .slide__btn button {
+    padding: 2rem 2.5rem;
   }
-  .slide__content {
+  .slider .slide__content {
     width: 70%;
-    padding: 0 15rem;
+    padding: 0 8rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-  .slide__content a {
+  .slider .slide__content a {
     width: 100%;
   }
   .about {
     height: 35%;
     display: flex;
+    align-items: center;
   }
   .about .about-img {
     height: 100%;
